--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="parrent">
-<div class="card">
+<!-- <div class="card">
  <h1 class="name"> 
     Popular this month
   </h1>
@@ -35,11 +35,7 @@
   <h2 class="price">price</h2>
  <p class="category">category</p>
   <p>brand
-</p></div>
-
-
-        
-
+</p></div> -->
     </div>
     <script src="app.js"></script>
 </body>
