--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <nav class="bg-white border-gray-200 dark:bg-gray-900">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
   <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
-<img 
+    <img 
   src="https://play-lh.googleusercontent.com/QGrAyCWOD1y8YfSLde7FRDSIadKaMVWpKn-hgxNzs4UT4g9Bz1I0DblRkLdMUJ8gdlGs" 
   alt="Shop Logo" 
   style="width: 60px; height: auto; border-radius: 8px;" 
@@ -69,7 +69,7 @@
   </div>
 </nav>
 
-
+<div class="btn"></div>
 
     <div class="parrent">
 
